[gd_scene load_steps=18 format=3 uid="uid://q34ntkuosgnn"]

[ext_resource type="Script" path="res://Levels/Map2.gd" id="1_a7f16"]
[ext_resource type="Script" path="res://Levels/CanvasLayer.gd" id="1_eihn7"]
[ext_resource type="Texture2D" uid="uid://ck6mhvxw8fbsk" path="res://Art/Maps/Map2_base.png" id="2_xlmpa"]
[ext_resource type="PackedScene" uid="uid://cbfcb208yyi6s" path="res://Characters/spren.tscn" id="3_bkyqo"]
[ext_resource type="Texture2D" uid="uid://bkod36e8vied7" path="res://Art/Maps/Map2_outer.png" id="4_kw18u"]
[ext_resource type="Texture2D" uid="uid://er4aov4ivp6n" path="res://Art/Maps/Objects/Map2_bridge.png" id="5_2sev8"]
[ext_resource type="Texture2D" uid="uid://01tmm0r3txt4" path="res://Art/Piece.PNG" id="6_4oxyv"]
[ext_resource type="PackedScene" uid="uid://cwx63b6pq552y" path="res://UI/text_box.tscn" id="8_h6udt"]
[ext_resource type="Texture2D" uid="uid://42tthcra81la" path="res://Art/Maps/Objects/Map2_tree.png" id="9_wdkoy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4s7cc"]
resource_local_to_scene = true
size = Vector2(5181.39, 2470.59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdewm"]
size = Vector2(64.5001, 86.0001)

[sub_resource type="CircleShape2D" id="CircleShape2D_gxi75"]
radius = 50.0401

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uufnu"]
size = Vector2(443.251, 204)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cla56"]
size = Vector2(396.626, 242)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dlgmf"]
size = Vector2(49.0015, 550.626)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13l6h"]
size = Vector2(59.5013, 279.251)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0j5f"]
size = Vector2(810.002, 144.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a7f16")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 26
position = Vector2(-400, -240)
zoom = Vector2(2, 2)
limit_left = -536
limit_top = -274
limit_right = 518
limit_bottom = 273
drag_vertical_enabled = true
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = 8
script = ExtResource("1_eihn7")

[node name="Tab_Overlay" type="Panel" parent="Camera2D/CanvasLayer"]
z_index = 1000
offset_left = 6.0
offset_top = 16.0
offset_right = 110.0
offset_bottom = 29.0
scale = Vector2(2, 2)

[node name="tab_open" type="Label" parent="Camera2D/CanvasLayer/Tab_Overlay"]
layout_mode = 0
offset_left = 5.0
offset_right = 199.0
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
text = "Press TAB to see controls"

[node name="Control_Overlay" type="Panel" parent="Camera2D/CanvasLayer"]
visible = false
z_index = 100
offset_left = -2.0
offset_top = -2.0
offset_right = 606.0
offset_bottom = 307.0
scale = Vector2(2, 2)

[node name="tab_close" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 203.0
offset_bottom = 35.0
scale = Vector2(0.5, 0.5)
text = "Press TAB to close"

[node name="Overworld" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 148.0
offset_top = 55.0
offset_right = 230.0
offset_bottom = 81.0
scale = Vector2(0.8, 0.8)
text = "Overworld"

[node name="Rhythm" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 413.0
offset_top = 55.0
offset_right = 474.0
offset_bottom = 81.0
scale = Vector2(0.8, 0.8)
text = "Rhythm
"

[node name="Controls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 260.0
offset_top = 23.0
offset_right = 326.0
offset_bottom = 49.0
text = "Controls"

[node name="OverworldControls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 134.0
offset_top = 75.0
offset_right = 291.0
offset_bottom = 205.0
scale = Vector2(0.6, 0.6)
text = "Up: W
Left: A
Down: S
Right: D
Interact: Space"
horizontal_alignment = 3

[node name="RhythmControls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 389.0
offset_top = 76.0
offset_right = 549.0
offset_bottom = 206.0
scale = Vector2(0.6, 0.6)
text = "Left: A
Center-Left: S
Center: Space
Center-Right: K
Right: L
Quit: Esc"
horizontal_alignment = 3

[node name="Map2Base" type="Sprite2D" parent="."]
scale = Vector2(0.051, 0.051)
texture = ExtResource("2_xlmpa")

[node name="Spren" parent="." instance=ExtResource("3_bkyqo")]
z_index = 1
position = Vector2(-400, -240)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Spren"]
remote_path = NodePath("../../Camera2D")

[node name="Map2Outer" type="Sprite2D" parent="."]
scale = Vector2(0.051, 0.051)
texture = ExtResource("4_kw18u")

[node name="Map2Bridge" type="Sprite2D" parent="."]
scale = Vector2(0.051, 0.051)
texture = ExtResource("5_2sev8")

[node name="Piece" type="Sprite2D" parent="."]
position = Vector2(118, -45)
scale = Vector2(0.03, 0.03)
texture = ExtResource("6_4oxyv")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(515.998, 2)
scale = Vector2(0.999998, 0.999998)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-138.873, -212)
scale = Vector2(0.051, 0.051)
shape = SubResource("RectangleShape2D_4s7cc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-28.9976, -123)
shape = SubResource("RectangleShape2D_sdewm")

[node name="DrumCollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-383.998, -39.0001)
shape = SubResource("CircleShape2D_gxi75")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-790.624, 174)
shape = SubResource("RectangleShape2D_uufnu")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-197.311, 154)
shape = SubResource("RectangleShape2D_cla56")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-1034.5, -0.312486)
shape = SubResource("RectangleShape2D_dlgmf")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-23.9974, 134.625)
shape = SubResource("RectangleShape2D_13l6h")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-410.998, -205.25)
shape = SubResource("RectangleShape2D_c0j5f")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
build_mode = 1
polygon = PackedVector2Array(-528.999, -9.00002, -574.999, 92.0002, -591.999, 177, -586.999, 273.001, -386.998, 273.001, -381.998, 180, -316.998, 2)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-515.999, -2.00001)
polygon = PackedVector2Array(14, -275, 38, -196, 29, -128, -29, -111, -32, -81, 25, -100, 78, -104, 65, -88, 84, -78, 156, -80, 179, -101, 252, -79, 244, -195, 245, -273)

[node name="TextBox" parent="." instance=ExtResource("8_h6udt")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Map2Tree" type="Sprite2D" parent="."]
z_index = 9
scale = Vector2(0.051, 0.051)
texture = ExtResource("9_wdkoy")

[connection signal="force_quit" from="TextBox" to="." method="_on_text_box_force_quit"]
[connection signal="text_finished" from="TextBox" to="." method="_on_text_box_text_finished"]
